--- a/design/index.html
+++ b/design/index.html
@@ -8,6 +8,9 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
+	
+
+	
     <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -18,8 +21,45 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, PLZ`ки!</h1>
-
+	<header class="top row-fluid">
+		<div class="col-md-2">
+		<img src="images/logo.png" class='fl logo'>
+		</div>
+		<div class="col-md-4 col-md-offset-3">
+		<h1>Печеньки в деле!</h1>
+		</div>
+		<div class="col-md-2">
+		<a href="#"><div class='vk_btn fr'><span class='sign_in'>Войти</span></div></a>
+		</div>
+	</header>
+	<div class="container">
+		<div class="row-fluid">
+			<div class="col-md-12">
+				<div class="row block">
+					<div class='col-md-4'>
+						<img src="images/1.png" class='img fl'>
+						<h2 class="text-left">Скинь PLZ'ку</h2>
+						<p class="text-left">Друзья выручают друг друга. Не успеваешь сделать домашку?
+						Нужна помощь по дому? Или тебе надо забрать вещи? Напиши другу!</p>
+					</div>
+				</div>
+				<div class="row block">
+					<div class='col-md-4 col-md-offset-8'>
+						<img src="images/2.png" class='img fr'>
+						<h2 class="text-right">Получи помощь</h2>
+						<p class="text-right">Узнав о проблеме друзья помогут!</p>
+					</div>
+				</div>
+				<div class="row block">
+					<div class='col-md-4'>
+						<img src="images/3.png" class='img fl'>
+						<h2 class="text-left">Дай печеньку</h2>
+						<p class="text-left">Скажи спасибо поделившись своей печенькой/кофе/Wi-Fi/...</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
