Added images and font for index.html; Created index.html

--- a/design/index.html
+++ b/design/index.html
@@ -4,15 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PLZ`ки</title>
+    <title>Добро пожаловать на PLZ'ки!</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
-	
-
-	
     <link href="css/style.css" rel="stylesheet">
-
+ 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -20,51 +17,149 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
+  <body>
+	<div class="container-fluid">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      		<div class="container-fluid">
+      			<div class="col-md-4 col-xs-4	">
+      				<img src="images/logo_sp.svg" style="margin-top:3px" width="58" height="58" >
+      			</div>
 
-	<div class="container">
-		<div class="row-fluid">
-			<div class="col-md-3 col-md-offset-2">
-				<img class='logo' src='images/logo1.png'>
-			</div>
-			<div class="col-md-5">
-				<h1 class='h1'>Печеньки в деле</h1>
-			</div>
+      			<div class="col-md-4 clearfix visible-md visible-lg"  >
+      				<div class="navbar-center">
+      					<h2 class="navbar-header">Печеньки в деле!</h2>
+      				</div>
+      			</div>
+
+      			<div class="col-md-4 col-xs-14">
+        			<button type="button" class="btn btn-default navbar-btn navbar-right vk_btn">
+        			<p style="margin-top:9px">Войти через</p>
+        			</button> 
+        		</div>
+      		</div>
+    	</nav>
 			
+		<div class="row">
+			<div class="col-md-12 col-xs-12">
+				<p class="h1" style="font-size:42px">У вас есть проблема, требующая немедленного</br> решения? Вам нужна помощь по дому?</p>
+				<p class="text-front" style="font-size:24px">Наш сервис предлагает набор удобных функций, позволяющих в три шага</br> получить помощь!</p>
+			</div>
 		</div>
-		
-		<div class="row-fluid">
-		
-			<div class="col-md-12">
-			<hr>
-				<div class="row block bl">
-					<div class='col-md-12'>
-						<img src="images/1.png" class='img fl'>
-						<h2 class="text-left">Скинь PLZ'ку</h2>
-						<p class="text-left">Друзья выручают друг друга. Не успеваешь сделать домашку?
-						Нужна помощь по дому? Или тебе надо забрать вещи? Напиши другу!</p>
-					</div>
+		<div class="row">
+
+			<!-- ПАНЕЛЬ С ИНСТРУКЦИЕЙ -->	
+			<div class="col-md-6 text-block">
+
+				<div class="row text-inblock-header col-xs-18">
+					<br>
+					<p> Как это работает? </p>
+					<br>
 				</div>
-				<hr>
-				<div class="row block br">
-					<div class='col-md-12'>
-						<img src="images/2.png" class='img fr'>
-						<h2 class="text-right">Получи помощь</h2>
-						<p class="text-right">Узнав о проблеме друзья помогут!</p>
+
+				<!-- ПЕРВЫЙ ШАГ -->	
+				<div class="row">
+					
+
+					<div class="col-md-3 col-xs-3"> <br> <img src="images/1.svg"></div>
+					<div class="col-md-6 col-xs-6">
+						<p class="text-inblock-header">Создай PLZ'ку</p> 
+						<p class="text-inblock">
+							Опиши задание и награду за его выполнение и отправь её другу!
+						</p> 
 					</div>
+
+					<img class="col-md-3 col-xs-3" src="images/ppl-right.svg" height="110">
 				</div>
-				<hr>
-				<div class="row block bl">
-					<div class='col-md-12'>
-						<img src="images/3.png" class='img fl'>
-						<h2 class="text-left">Дай печеньку</h2>
-						<p class="text-left">Скажи спасибо поделившись своей печенькой/кофе/Wi-Fi/...</p>
+
+				<!-- ВТОРОЙ ШАГ -->
+				<div class="row">
+					<br/>
+					<br>
+					<div class="col-md-3 col-xs-3"> <br> <img src="images/2.svg"></div>
+					<div class="col-md-6 col-xs-6">
+						<p class="text-inblock-header">Получи помощь</p>
+						<p class="text-inblock">
+							Узнав о проблеме друзья помогут!
+						</p> 
 					</div>
+					<img class="col-md-3 col-xs-3" src="images/ppl-left.svg" height="110">
+				</div>
+
+				<!-- ТРЕТИЙ ШАГ -->
+				<div class="row">
+					<br/>
+					<br>
+					<br>
+
+					<div class="col-md-3 col-xs-3"> <br> <img src="images/3.svg"> </div>
+					<div class="col-md-6 col-xs-6">
+						<p class="text-inblock-header">Дай печеньку</p>
+						<p class="text-inblock">
+							Скажи другу спасибо, поделившись с ним печенькой/кофе/wi-fi...
+						</p> 
+					</div>
+
+					<img class="col-md-3 col-xs-3" src="images/ppls.svg" height="161">
+				</div>
+
+			</div>
+
+			<!-- ПАНЕЛЬ С ОПИСАНИЕМ -->	
+			<div class="col-md-6">
+				<div class="row col-md-6">
+					<div class="h1">
+						Просто и быстро!
+					</div>
+					<div class="text-front">
+						Полный список заданий всегда доступен в один клик! 
+					</div> 
+				</div>
+				<div class="row col-md-7 col-md-offset-5">
+					<div class="h1">
+						Всегда с вами!
+					</div>						
+					<div class="text-front">
+						Вы можете пользоваться сервисом как с настольного компьютера, так и с мобильного телефона!
+					</div> 
+				</div>
+				<div class="row col-md-6">
+					<div class="h1">
+						Это весело!
+					</div>						
+					<div class="text-front">
+						"Карма" за выполнение заданий покажет, кто настоящий друг! :)
+					</div> 
+				</div>
+				<div class="row col-md-7 col-md-offset-5">
+					<div class="h1">
+						Это удобно!
+					</div>						
+					<div class="text-front">
+						Для нас важно, чтобы ваши задачи решались быстрее, и мы сделали всё от нас зависящее! 
+					</div> 
+				</div>
+				<div class="row col-md-6">
+					<div class="h1">
+						Элементарно!
+					</div>						
+					<div class="text-front">
+						Простой и интуитивно понятный интерфейс - это наша гордость :)
+					</div> 
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="col-md-2 col-md-offset-4">
-		<a href="#"><div class='vk_btn fr'><span class='sign_in'>Войти</span></div></a>
+		<br><br><br>
+		<div class="row-fluid text-block col-md 12" style="text-align:center"> 
+			
+			<a class="a-inb" href="#">PLZ'ки</a>
+			
+			 · 
+			<a class="a-inb" href="#">О нас</a>
+			 · 
+			<a class="a-inb" href="#">Помощь</a>
+			 · 
+			<a class="a-inb" href="#">Политика конфиденциальности</a>
+		</div>
 	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
