--- a/design/main.html
+++ b/design/main.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bar</title>
+    <title>Лента</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
  
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,24 +19,111 @@
     <![endif]-->
   </head>
   <body>
-  
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Plz`ки</a>
-        <button type="button" class="btn btn-default navbar-btn navbar-right">
-              <span class="glyphicon glyphicon-plus"></span>
-        </button>  
-        <div class="btn-group navbar-center">
-          <button type="button" class="btn btn-default navbar-btn active">Лента</button>
-          <button type="button" class="btn btn-default navbar-btn">Друзья</button>
-          <button type="button" class="btn btn-default navbar-btn">Профиль</button>
-        </div>
-      </div>
-    </nav>
+  	<div class="container-fluid">
+    	<nav class="row-fluid navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="col-md-1 col-xs-1 ">
+              <img src="images/logo_sp.svg" style="margin-top:3px" width="58" height="58" >
+        	</div>
 
+            <div class="col-md-3 col-xs-14 navbar-center">
+              <div class=" btn-toolbar btn-group" style="margin-top:13px">
+                <a class="btn active btn-default" href="#">Лента</a>
+                <a class="btn btn-default" href="#">Друзья</a>
+                <a class="btn btn-default" href="#">Профиль</a>
+              </div>
+            </div>
+		</nav>
+	</div>
+
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="col-lg-3 col-xs-0 col-md-2 col-s-1"></div>
+				<div class="col-lg-6 col-xs-12 col-md-8 col-s-10 band-block">
+					<div style="margin-top:2%">
+						<div class="col-lg-1 col-xs-2 col-md-1 col-s-1"> <img class="img-rounded avatar" src="images/avats/0.png" height="60px" width="60px"> </div>
+						<div class="col-lg-8 col-xs-8 col-md-9 col-s-9">
+							<p class="row-fluid col-lg-12 col-xs-12 col-md-12 col-s-12 nickname">Джеймс Кирк</p>
+							<div class="row-fluid col-lg-12 col-xs-12 col-md-12 col-s-12">
+								<p class="task" >Помоги приготовить Споку вулканский торт на день рождения. Ты должен купить следующие ингриди...</p>
+								<p class="award">Дам поиграться с фазером</p>
+							</div>
+							<p class="row-fluid call-lg-12 col-xs-12 col-md-12 col-s-12 remaining">Осталось 5 дней</p>	
+						</div>
+						<div class="col-lg-3 col-xs-2 col-md-2 col-s-2">
+							<p class="updated">15 мин.</p>
+							<p class="status">Можно взять</p>
+						</div>
+					</div>
+				</div>
+			<div class="col-lg-3 col-xs-0 col-md-2 col-s-1"></div>
+		</div>
+	</div>
+
+
+
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="col-lg-3 col-xs-0 col-md-2 col-s-1"></div>
+				<div class="col-lg-6 col-xs-12 col-md-8 col-s-10 band-block">
+					<div style="margin-top:2%">
+						<div class="col-lg-1 col-xs-2 col-md-1 col-s-1"> <img class="img-rounded avatar" src="images/avats/326298008_640.jpg" height="60px" width="60px"> </div>
+						<div class="col-lg-8 col-xs-8 col-md-9 col-s-9">
+							<p class="row-fluid col-lg-12 col-xs-12 col-md-12 col-s-12 nickname">R2-D2</p>
+							<div class="row-fluid col-lg-12 col-xs-12 col-md-12 col-s-12">
+								<p class="task" >Вжик-вжик-пиииииииииииииу!</p>
+								<p class="award">Вуууууууууууууууууп!</p>
+							</div>
+							<p class="row-fluid call-lg-12 col-xs-12 col-md-12 col-s-12 remaining">Времени не осталось!</p>
+						</div>
+						<div class="col-lg-3 col-xs-2 col-md-2 col-s-2">
+							<p class="updated">47 мин.</p>
+							<p class="status">Провалено</p>
+						</div>
+					</div>
+				</div>
+			<div class="col-lg-3 col-xs-0 col-md-2 col-s-1"></div>
+		</div>
+	</div>	
+
+
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="col-lg-3 col-xs-0 col-md-2 col-s-1"></div>
+				<div class="col-lg-6 col-xs-12 col-md-8 col-s-10 band-block">
+					<div style="margin-top:2%">
+						<div class="col-lg-1 col-xs-2 col-md-1 col-s-1"> <img class="img-rounded avatar" src="images/avats/1366362343_vaserman_3.jpg" height="60px" width="60px"> </div>
+						<div class="col-lg-8 col-xs-8 col-md-9 col-s-9">
+							<p class="row-fluid col-lg-12 col-xs-12 col-md-12 col-s-12 nickname">Анатолий Вассерман</p>
+							<div class="row-fluid col-lg-12 col-xs-12 col-md-12 col-s-12">
+								<p class="task" >Проголосуй за меня в конкурсе "Самая шикарная жилетка 2014". Не забудь, что сначала там нужно...</p>
+								<p class="award">Лекция по физике</p>
+							</div>
+							<p class="row-fluid call-lg-12 col-xs-12 col-md-12 col-s-12 remaining">2 дня</p>
+						</div>
+						<div class="col-lg-3 col-xs-2 col-md-2 col-s-2">
+							<p class="updated">4 часа</p>
+							<p class="status">Взято</p>
+						</div>
+					</div>
+				</div>
+			<div class="col-lg-3 col-xs-0 col-md-2 col-s-1"></div>
+		</div>
+	</div>
+
+	<div class="container-fluid">
+		<div class="row-fluid text-block col-md 12" style="text-align:center"> 
+	      <a class="a-inb" href="#">PLZ'ки</a>
+	       · 
+	      <a class="a-inb" href="#">О нас</a>
+	       · 
+	      <a class="a-inb" href="#">Помощь</a>
+	       · 
+	      <a class="a-inb" href="#">Политика конфиденциальности</a>
+	    </div>
+	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-     <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
