details.html - added avatar

--- a/design/details.html
+++ b/design/details.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Добро пожаловать на PLZ'ки!</title>
+		<title>Просьба от %username%</title>
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
@@ -19,27 +19,34 @@
 	<body>
 	<div class="container-fluid">
 		<div class="page-content inset">
+
 			<div class="col-md-6 col-md-offset-3 main">
-				<h2 class="caption">Task</h2>
-				<p class="well well-lg">Lorem ipsum dolor sit amet,
-				consectetur adipiscing elit. Integer vehicula ligula eget massa ullamcorper volutpat.
-				Duis consectetur commodo risus id tincidunt. 
-				Integer fermentum adipiscing purus et hendrerit.
-				Maecenas blandit, mi quis malesuada sodales, metus nisl imperdiet leo,
-				et sagittis sapien lectus adipiscing lacus. Quisque odio metus,
-				congue ut dolor vel, mattis molestie dolor. Quisque sit amet ligula quam. 
-				Nulla condimentum nunc vitae pharetra auctor. Vestibulum adipiscing in nisi in luctus. 
-				Suspendisse vel tempus nunc. Nullam neque odio, suscipit in nulla et, semper semper magna.
-				Etiam porta ante rutrum, convallis nibh id, aliquet ipsum. 
-				Sed sit amet velit interdum elit aliquet posuere.
-				Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-				Vestibulum ut mattis elit.</p>
-				<p class="caption">Award</p>
-				<p class="well">Text</p>
-				<center>
-					<button type="button" class="btn btn-default btn-lg">Accept</button>
-					<button type="button" class="btn btn-default btn-lg">Decline</button>
-				</center>
+				<div class="col-md-2">
+					<span class="username">%username%</span>
+					<img class="avatar" src="images/avats/0.png">
+				</div>
+				<div class="col-md-10 avat">
+					<h2 class="caption">Task</h2>
+					<p class="well well-lg">Lorem ipsum dolor sit amet,
+					consectetur adipiscing elit. Integer vehicula ligula eget massa ullamcorper volutpat.
+					Duis consectetur commodo risus id tincidunt. 
+					Integer fermentum adipiscing purus et hendrerit.
+					Maecenas blandit, mi quis malesuada sodales, metus nisl imperdiet leo,
+					et sagittis sapien lectus adipiscing lacus. Quisque odio metus,
+					congue ut dolor vel, mattis molestie dolor. Quisque sit amet ligula quam. 
+					Nulla condimentum nunc vitae pharetra auctor. Vestibulum adipiscing in nisi in luctus. 
+					Suspendisse vel tempus nunc. Nullam neque odio, suscipit in nulla et, semper semper magna.
+					Etiam porta ante rutrum, convallis nibh id, aliquet ipsum. 
+					Sed sit amet velit interdum elit aliquet posuere.
+					Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+					Vestibulum ut mattis elit.</p>
+					<p class="caption">Award</p>
+					<p class="well">Text</p>
+					<center>
+						<button type="button" class="btn btn-default btn-lg">Accept</button>
+						<button type="button" class="btn btn-default btn-lg">Decline</button>
+					</center>
+				</div>
 			</div>
 		</div>
 	</div>
