Changed images, changed style for index.html, Changed view for index

--- a/design/index.html
+++ b/design/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Добро пожаловать на PLZ'ки!</title>
+    <title>Добро пожаловать на ДайПять!</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -22,19 +22,19 @@
 	<div class="container-fluid">
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       		<div class="container-fluid">
-      			<div class="col-md-4 col-xs-4	">
+      			<div class="col-md-2 col-xs-4	">
       				<img src="images/logo_sp.svg" style="margin-top:3px" width="58" height="58" >
       			</div>
 
-      			<div class="col-md-4 clearfix visible-md visible-lg"  >
+      			<div class="col-md-8 clearfix visible-md visible-lg"  >
       				<div class="navbar-center">
-      					<h2 class="navbar-header">Печеньки в деле!</h2>
+      					<h2 class="navbar-header">Первый в мире таск-менеджер для друзей!</h2>
       				</div>
       			</div>
 
-      			<div class="col-md-4 col-xs-14">
+      			<div class="col-md-2 col-xs-14">
         			<button type="button" class="btn btn-default navbar-btn navbar-right vk_btn">
-        			<p style="margin-top:9px">Войти через</p>
+        			<p style="margin-top:8px">Войти через</p>
         			</button> 
         		</div>
       		</div>
@@ -42,7 +42,7 @@
 			
 		<div class="row">
 			<div class="col-md-12 col-xs-12">
-				<p class="h1" style="font-size:42px">У вас есть проблема, требующая немедленного</br> решения? Вам нужна помощь по дому?</p>
+				<p class="h1" style="font-size:42px">У вас есть проблема, требующая немедленного решения?</br> Кто, как не лучшие друзья сможет вам помочь!</p>
 				<p class="text-front" style="font-size:24px">Наш сервис предлагает набор удобных функций, позволяющих в три шага</br> получить помощь!</p>
 			</div>
 		</div>
@@ -63,9 +63,9 @@
 
 					<div class="col-md-3 col-xs-3"> <br> <img src="images/1.svg"></div>
 					<div class="col-md-6 col-xs-6">
-						<p class="text-inblock-header">Создай PLZ'ку</p> 
+						<p class="text-inblock-header">Создай  задание</p> 
 						<p class="text-inblock">
-							Опиши задание и награду за его выполнение и отправь её другу!
+							Опиши просьбу и награду за её выполнение и отправь её другу!
 						</p> 
 					</div>
 
@@ -152,7 +152,7 @@
 		<br><br><br>
 		<div class="row-fluid text-block col-md 12" style="text-align:center"> 
 			
-			<a class="a-inb" href="#">PLZ'ки</a>
+			<a class="a-inb" href="#">Дай пять!</a>
 			
 			 · 
 			<a class="a-inb" href="#">О нас</a>
