--- a/design/friendlist.html
+++ b/design/friendlist.html
@@ -37,7 +37,7 @@
       <div class="container">
        
         <div class="row">
-          <div class="col-md-6 col-md-offset-3 col-xs-12 band-block_frlist">
+          <div class="col-md-6 col-md-offset-3 col-xs-12 band-block-frnd">
             <div class="avatar_frlist"><img class="img-rounded" src="images/avats/0.png" height="80px" width="80px"> </div>
             <div class="nickname_frlist">Чувак Из Стартрека1</div>  
             <div class="badge">+18</div>
@@ -45,7 +45,7 @@
         </div>
         
         <div class="row">
-          <div class="col-md-6 col-md-offset-3 col-xs-12 band-block_frlist">
+          <div class="col-md-6 col-md-offset-3 col-xs-12 band-block-frnd">
             <div class="avatar_frlist"><img class="img-rounded" src="images/avats/0.png" height="80px" width="80px"> </div>
             <div class="nickname_frlist">Чувак Из Стартрека2</div>  
             <div class="badge">+18</div>
